enum UndefinedValues {
  Foo,
  Bar,
  Baz
}

enum DefinedValues {
  Foo = 1,
  Bar = 2,
  Baz = 3
}

enum HeterogeneousValues {
  Foo,
  Bar = 2,
  Baz,
  Qux = 4
}
